--- a/index.html
+++ b/index.html
@@ -8,6 +8,9 @@
 
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@4.5.3/dist/css/bootstrap.min.css" integrity="sha384-TX8t27EcRE3e/ihU7zmQxVncDAy5uIKz4rEkgIXeMed4M0jlfIDPvg6uqKI2xXr2" crossorigin="anonymous">
+    
+    <!-- font awesome-->
+    <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
 
     <!-- Custom CSS -->
     <link rel="stylesheet" href="style.css">
@@ -33,7 +36,7 @@
                         <a class="nav-link" href="#">Radionice</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="#">Snimci radionica</a>
+                        <a class="nav-link" href="#">Video</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="#">O nama</a>
@@ -51,7 +54,21 @@
 
     <!-- header-->
     <header>
-
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <i class="fas fa-laptop-code"></i>
+                    <h1>Webcon radionice – kodirajte sa nama</h1>
+                    <p class="lead">Učite kroz konkretne, praktične primere kao i prave sajtove za klijente.
+                    <br>
+                    Pratite uživo, a posle možete da se podsetite kroz snimke koje dobijate posle radionice.</p>
+                    <a href="" class="btn btn-warning">Radionice</a>
+                </div>
+                <div class="col-md-6">
+                    <h2>Ovde ce biti slika na pozadini</h2>
+                </div>
+            </div>
+        </div>
     </header>
 
 
