nav i header stilovi

--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
 <body>
 
     <!-- nav -->
-    <nav class="navbar navbar-expand-lg navbar-light">
+    <nav class="navbar navbar-expand-lg fixed-top">
         <div class="container">
             <a class="navbar-brand" href="#">webcon</a>
             <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
@@ -55,14 +55,14 @@
     <!-- header-->
     <header>
         <div class="container">
-            <div class="row">
-                <div class="col-md-6">
+            <div class="row align-items-center">
+                <div class="col-md-6 text-white">
                     <i class="fas fa-laptop-code"></i>
                     <h1>Webcon radionice – kodirajte sa nama</h1>
-                    <p class="lead">Učite kroz konkretne, praktične primere kao i prave sajtove za klijente.
+                    <p class="lead py-3">Učite kroz konkretne, praktične primere kao i prave sajtove za klijente.
                     <br>
                     Pratite uživo, a posle možete da se podsetite kroz snimke koje dobijate posle radionice.</p>
-                    <a href="" class="btn btn-warning">Radionice</a>
+                    <a href="" class="button">Radionice&nbsp; &rarr;</a>
                 </div>
                 <div class="col-md-6">
                     <h2>Ovde ce biti slika na pozadini</h2>
