--- a/index.html
+++ b/index.html
@@ -53,7 +53,7 @@
     </nav>
 
     <!-- header-->
-    <header>
+    <header class="mainHeader">
         <div class="container">
             <div class="row align-items-center">
                 <div class="col-md-6 text-white">
@@ -63,9 +63,6 @@
                     <br>
                     Pratite uživo, a posle možete da se podsetite kroz snimke koje dobijate posle radionice.</p>
                     <a href="" class="button">Radionice&nbsp; &rarr;</a>
-                </div>
-                <div class="col-md-6">
-                    <h2>Ovde ce biti slika na pozadini</h2>
                 </div>
             </div>
         </div>
