a sta nismo radili

--- a/index.html
+++ b/index.html
@@ -67,6 +67,67 @@
             </div>
         </div>
     </header>
+    
+    <!-- uvod -->
+    <section class="uvod container">
+        <h2>Prve koderske radionice uživo u regionu </h2>
+        <div class="underline">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        <p class="text-center lead mb-5">Kodiramo zajedno projekte</p>
+        <div class="row justify-content-between mb-5">
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>PRAKTIČNI PRIMERI </h3>
+                    <p>Kodiramo sa vama zajedno uživo konkretne projekte </p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3> OBLASTI </h3>
+                    <p>Teme su HTML, CSS, JS i PHP, pripadajući framework-ci i preprocesori. Spajamo tehnologije iz veb dizajna i programiranja </p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>CILJEVI RADIONICA </h3>
+                    <p>Samostalnost u kodiranju, bolje razumevanje samo tehnologije </p>
+                </div>
+            </div>
+        </div>
+        <div class="row justify-content-between mb-5">
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>UŽIVO I ONLINE  </h3>
+                    <p>Pored kodiranja uživo sa predavačem, dobija se i snimak radionice  </p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <i class="fas fa-laptop-code"></i>
+                    <h3>VREMENSKO TRAJANJE </h3>
+                    <p>Jednodnevne, dvodnevne i jednomesečne </p>
+                </div>
+            </div>
+            <div class="col-md-4 col-sm-6">
+                <div class="box">
+                    <i class="fas fa-laptop-code"></i>
+                <h3>GODIŠNJA KARTE  </h3>
+                <p>Oni koji kupe godišnji paket imaju mentorski program u toku cele godine. </p>
+                </div>
+            </div>
+        </div>
+        <div class="row mt-5 justify-content-center">
+            <a href="" class="button mr-3">Radionice</a>
+            <a href="" class="button violetBtn ml-3">O nama</a>
+        </div>
+    </section>
 
 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
