--- a/index.html
+++ b/index.html
@@ -128,6 +128,27 @@
             <a href="" class="button violetBtn ml-3">O nama</a>
         </div>
     </section>
+    
+    <!-- onama -->
+    <section class="onama">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-6">
+                    <h3>NAJVAŽNIJA JE PRAKSA I ISKUSTVO </h3>
+                    <p>Svako ko je učio da kodira, bilo samostalno ili u nekoj školi, zna da je jedno učenje a drugo praktično primeniti znanje na konkretnim primerima. <br><br>
+                    Znanje postane upotrebljivo tek onda kad se primeni na realnim projektima. </p>
+                </div>
+                <div class="col-md-6">
+                    <h3>AKO SE PITATE ZAŠTO BAŠ DA SA NAMA UČITE I VEŽBATE</h3>
+                    <p>Zato što se dugo za ovo spremamo. Sada znamo da možemo. <br><br>
+                    Sve o nama možete pogledati  OVDE.
+                    <br><br>
+                    I najvažnije, najsvežije utiske naših polaznika koji su sada na našim online kursevima OVDE . 
+                    </p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
