--- a/index.html
+++ b/index.html
@@ -149,6 +149,20 @@
             </div>
         </div>
     </section>
+    
+    <!-- utisci -->
+    <section class="utisci py-5">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-5">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Necessitatibus omnis reprehenderit nihil odio autem voluptas quae numquam nulla eos dolores libero esse aliquam dolorum delectus illo illum sit harum tempore unde nam suscipit, veritatis perferendis, soluta, consequuntur. Eos dicta saepe iste assumenda, nam, molestias nihil voluptates sequi sint ea sapiente culpa quas ratione, eum omnis harum. Dolores nemo placeat quod, libero! Corrupti possimus enim voluptates, necessitatibus quas iure deserunt fuga eum vel dolor debitis et reprehenderit nisi est nam obcaecati praesentium harum ratione repellendus aspernatur, voluptate. Non iusto, inventore eveniet a, sapiente totam sunt voluptatibus unde soluta nesciunt quaerat aut.</p>
+                </div>
+                <div class="col-md-7">
+                    <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Eos labore porro quo saepe libero, aut alias cumque, officiis vel aliquam explicabo velit atque ex culpa perferendis molestiae dignissimos laboriosam, quidem totam deleniti, corporis hic soluta. Vero expedita tenetur, temporibus ipsam saepe error pariatur, quos quidem dolores tempore labore omnis ducimus dolor accusantium nulla numquam molestias a voluptate dolorum aperiam. Dolorem sed beatae ex, culpa ratione labore ab voluptatibus reprehenderit, nulla nobis porro, optio. Nisi fugiat incidunt molestias illo quod eligendi excepturi accusantium laboriosam provident autem doloremque enim ea veniam expedita quasi consequuntur eveniet, veritatis impedit assumenda a. Illum temporibus, minus ad hic, quibusdam debitis, earum at laboriosam doloremque animi pariatur incidunt ea obcaecati aperiam nobis quisquam rerum doloribus nisi placeat quos aut velit? Eveniet nam omnis, hic eos laborum odit esse error similique minima veritatis eum, provident, aut dolores. Fugiat tempora rerum ducimus, aspernatur saepe aliquid. Vel incidunt maxime libero.</p>
+                </div>
+            </div>
+        </div>
+    </section>
 
 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
