snimci radionica u slideru

--- a/index.html
+++ b/index.html
@@ -11,7 +11,7 @@
 
     <!-- font awesome-->
     <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.2/css/all.css" integrity="sha384-oS3vJWv+0UjzBfQzYUhtDYW+Pj2yciDJxpsK1OYPAYjqT085Qq/1cq5FLXAZQ7Ay" crossorigin="anonymous">
-    
+
     <!-- Owl CSS -->
     <link rel="stylesheet" href="css/owl.carousel.min.css">
     <link rel="stylesheet" href="css/owl.theme.default.min.css">
@@ -137,13 +137,11 @@
     <!-- onama -->
     <section class="onama">
         <div class="container">
-            <div class="row">
+            <div class="row align-items-center">
                 <div class="col-md-6">
                     <h3>NAJVAŽNIJA JE PRAKSA I ISKUSTVO </h3>
                     <p>Svako ko je učio da kodira, bilo samostalno ili u nekoj školi, zna da je jedno učenje a drugo praktično primeniti znanje na konkretnim primerima. <br><br>
                         Znanje postane upotrebljivo tek onda kad se primeni na realnim projektima. </p>
-                </div>
-                <div class="col-md-6">
                     <h3>AKO SE PITATE ZAŠTO BAŠ DA SA NAMA UČITE I VEŽBATE</h3>
                     <p>Zato što se dugo za ovo spremamo. Sada znamo da možemo. <br><br>
                         Sve o nama možete pogledati OVDE.
@@ -151,22 +149,25 @@
                         I najvažnije, najsvežije utiske naših polaznika koji su sada na našim online kursevima OVDE .
                     </p>
                 </div>
+                <div class="col-md-6">
+                    <img class="img-fluid" src="img/onama.jpg" alt="">
+                </div>
             </div>
         </div>
     </section>
 
     <!-- utisci -->
-    <section class="utisci py-5">
+    <section class="utisci">
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
-                    <div class="card">
-                        <img src="img/header.jpg" class="card-img-top" alt="...">
+                    <div class="card emb-3">
+                        <div class="card-header">Snimci radionica</div>
                         <div class="card-body">
-                            <h5 class="card-title">Card title</h5>
-                            <p class="card-text">Some quick example text to build on the card title and make up the bulk of the card's content.</p>
-                            <a href="#" class="btn btn-primary">Go somewhere</a>
+                            <h5 class="card-title">Besplatan sadrzaj</h5>
+                            <p class="card-text">Za sve one koji zele da se oprobaju i uce sa nama, imate snimke radionica i promotivne periode placenih.</p>
                         </div>
+                        <a href="" class="button">Snimci radionica&nbsp; &rarr;</a>
                     </div>
                 </div>
                 <div class="col-md-7 d-flex align-items-center text-white">
