--- a/index.html
+++ b/index.html
@@ -157,31 +157,33 @@
     </section>
 
     <!-- utisci -->
-    <section class="utisci">
+    <section class="utisci pb-5">
         <div class="container">
             <div class="row">
                 <div class="col-md-5">
                     <div class="card emb-3">
-                        <div class="card-header">Snimci radionica</div>
+                        <div class="card-header text-white text-center">Snimci radionica</div>
                         <div class="card-body">
                             <h5 class="card-title">Besplatan sadrzaj</h5>
-                            <p class="card-text">Za sve one koji zele da se oprobaju i uce sa nama, imate snimke radionica i promotivne periode placenih.</p>
+                            <p class="card-text py-2">Za sve one koji zele da se oprobaju i uce sa nama, imate snimke radionica i promotivne periode placenih.</p>
+                            <a href="" class="button">Posetite stranicu&nbsp; &rarr;</a>
+                            <br><br>
+                            <small>* Pridruzite nam se</small>
                         </div>
-                        <a href="" class="button">Snimci radionica&nbsp; &rarr;</a>
                     </div>
                 </div>
                 <div class="col-md-7 d-flex align-items-center text-white">
                     <div class="owl-carousel owl-theme">
                         <div class="item">
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque aliquid quis, numquam fugiat totam illum at impedit beatae, officiis voluptatum itaque minus mollitia dolor non in sapiente iste architecto cum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque aliquid quis, numquam fugiat totam illum at impedit beatae, officiis voluptatum itaque minus mollitia dolor non in sapiente iste architecto cum.</p>
                             <small>Andreja Markovic</small>
                         </div>
                         <div class="item">
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque aliquid quis, numquam fugiat totam illum at impedit beatae, officiis voluptatum itaque minus mollitia dolor non in sapiente iste architecto cum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque aliquid quis, numquam fugiat totam illum at impedit beatae, officiis voluptatum itaque minus mollitia dolor non in sapiente iste architecto cum.</p>
                             <small>Filip Jotic</small>
                         </div>
                         <div class="item">
-                            <p class="lead">Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque aliquid quis, numquam fugiat totam illum at impedit beatae, officiis voluptatum itaque minus mollitia dolor non in sapiente iste architecto cum.</p>
+                            <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. Doloremque aliquid quis, numquam fugiat totam illum at impedit beatae, officiis voluptatum itaque minus mollitia dolor non in sapiente iste architecto cum.</p>
                             <small>Dusica Antanasijevic Ilic</small>
                         </div>
                     </div>
