--- a/index.html
+++ b/index.html
@@ -192,6 +192,122 @@
         </div>
     </section>
 
+    <!-- radioniceHome -->
+    <section class="radioniceHome container py-5">
+        <h2>Kalendar radionica </h2>
+        <div class="underline">
+            <div class="line1"></div>
+            <div class="line2"></div>
+            <div class="line3"></div>
+        </div>
+        <div class="row mt-5">
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img src="img/header.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-7">
+                        <div class="datum">20. januar 2021.</div>
+                        <h3>Napredni WordPress</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                        <a href="">Vise o radionici&nbsp; &rarr;</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img src="img/header.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-7">
+                        <div class="datum">20. januar 2021.</div>
+                        <h3>Napredni WordPress</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                        <a href="">Vise o radionici&nbsp; &rarr;</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img src="img/header.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-7">
+                        <div class="datum">20. januar 2021.</div>
+                        <h3>Napredni WordPress</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                        <a href="">Vise o radionici&nbsp; &rarr;</a>
+                    </div>
+                </div>
+            </div>
+            <div class="col-md-6">
+                <div class="row">
+                    <div class="col-md-5">
+                        <img src="img/header.jpg" alt="" class="img-fluid">
+                    </div>
+                    <div class="col-md-7">
+                        <div class="datum">20. januar 2021.</div>
+                        <h3>Napredni WordPress</h3>
+                        <p>Lorem ipsum dolor sit amet, consectetur adipisicing elit. </p>
+                        <a href="">Vise o radionici&nbsp; &rarr;</a>
+                    </div>
+                </div>
+            </div>
+        </div>
+    </section>
+
+    <!-- footer -->
+    <footer class="py-5 text-white">
+        <div class="container">
+            <div class="row">
+                <div class="col-md-4">
+                    <h3>Kontakt</h3>
+                    <p>Telefon: 062 218 454</p>
+                    <p>Email: info@webcon.rs</p>
+                    <a href=""><i class="fab fa-facebook-square"></i></a>
+                    <a href=""><i class="fab fa-instagram"></i></a>
+                    <a href=""><i class="fab fa-youtube"></i></a>
+                    <a href=""><i class="fab fa-linkedin"></i></a>
+                    <a href=""><i class="fab fa-twitter"></i></a>
+                </div>
+                <div class="col-md-4">
+                    <h3>Partneri</h3>
+                    <img src="img/partneri.png" alt="">
+                    <img src="img/partneri1.png" alt="">
+                    <img src="img/partneri2.png" alt="">
+                </div>
+                <div class="col-md-4">
+                    <h3>Mapa sajta</h3>
+                    <ul>
+                        <li>
+                            <a href="#">Home <span class="sr-only">(current)</span></a>
+                        </li>
+                        <li>
+                            <a href="#">Radionice</a>
+                        </li>
+                        <li>
+                            <a href="#">Video</a>
+                        </li>
+                        <li>
+                            <a href="#">O nama</a>
+                        </li>
+                        <li>
+                            <a href="#">Blog</a>
+                        </li>
+                        <li>
+                            <a href="#">Kontakt</a>
+                        </li>
+                    </ul>
+                </div>
+            </div>
+            <hr>
+            <div class="row">
+                <div class="col-md-12">
+                    <p class="text-center">&copy; 2020. Napravili polazinici radionica Webcon-a</p>
+                </div>
+            </div>
+        </div>
+    </footer>
 
     <!-- Option 2: jQuery, Popper.js, and Bootstrap JS -->
     <script src="https://code.jquery.com/jquery-3.5.1.slim.min.js" integrity="sha384-DfXdz2htPH0lsSSs5nCTpuj/zy4C+OGpamoFVy38MVBnE+IbbVYUew+OrCXaRkfj" crossorigin="anonymous"></script>
